# nogisync

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  action.yaml  pyproject.toml
.github/workflows/: tests.yml
docs/: test_file.md  test_file_no_frontmatter.md
docs/some_random_folder/: other_file.md
nogisync/: __main__.py
src/nogisync/: __main__.py  cli.py  markdown.py  notion.py
tests/: test_cli.py  test_main.py  test_markdown.py  test_notion.py
